--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,7 +43,7 @@
             </div>
         </div>
         <div class="not" id="not">
-            <p>თვენ უკვე გამოიყენეთ ეს ასობგერა</p>
+            <p>თქვენ უკვე გამოიყენეთ ეს ასობგერა</p>
         </div>
     </div>
 
