add clues to words

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             </div>
 
             <div id="word" class="word"></div>
+            <div class="clue" id="clue">
+                <span>მინიშნება : </span>
+                <span id="clueText" class="clueText"></span>
+            </div>
         </div>
         <div id="won">
             <div class="won">
